# collate

./: .gitignore  Cargo.toml  README.md
src/: args.rs  binpacking.rs  config.rs  conversations.rs  globals.rs  lib.rs  main.rs  template.rs  utils.rs
