[package]
name = "collate"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrow = "54.0.0"
clap = { version = "4.5.27", features = ["derive"] }
crossbeam-channel = "0.5.14"
hf-hub = "0.3.2"
indicatif = { version = "0.17.11", features = ["rayon"] }
minijinja = "2.7.0"
minijinja-contrib = { version = "2.7.0", features = ["pycompat"] }
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokenizers = { version = "0.21.0", features = ["hf-hub", "http"] }


